[gd_scene load_steps=4 format=3 uid="uid://bvrcg1k2qwnnw"]

[ext_resource type="Script" path="res://Tree.gd" id="1_jxkps"]
[ext_resource type="PackedScene" uid="uid://bx07pmkrvw2xs" path="res://selection_area_2d.tscn" id="3_hd2vc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kc3ss"]
radius = 54.0
height = 126.0

[node name="Tree" type="StaticBody2D"]
script = ExtResource("1_jxkps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kc3ss")

[node name="SelectionArea2D" parent="." instance=ExtResource("3_hd2vc")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SelectionArea2D"]
shape = SubResource("CapsuleShape2D_kc3ss")

[connection signal="mouse_entered" from="SelectionArea2D" to="." method="_on_selection_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea2D" to="." method="_on_selection_area_2d_mouse_exited"]
[connection signal="selection_toggled" from="SelectionArea2D" to="." method="_on_selection_area_2d_selection_toggled"]
